cleaned up BasicNode a bit, delegated some stuff to BasicCloud (if something different must happen in Transaction), using valueOf methods, fix for MMB-1356
git-svn-id: https://scm.mmbase.org/mmbase/trunk@21916 91430c5f-d668-0410-9e7d-dd663366dcfd